# puteron

./: readme.md
source/: Cargo.toml  generate.sh  module.nix  module_gendir.py  package.nix
source/puterium/: Cargo.toml
source/puterium-lib/: Cargo.toml
source/puterium-lib/src/: duration.rs
source/puterium-lib/src/interface/message/: mod.rs  v1.rs
source/puterium-lib/src/interface/task/: mod.rs
source/puterium/src/: ipc.rs  main.rs  spec.rs  task.rs
source/puterium/src/demon/: mod.rs  run.rs  state.rs
source/puteron/: Cargo.toml
source/puteron-bin/: Cargo.toml
source/puteron-bin/src/: ipc_util.rs  lib.rs  nodes.md  spec.rs  task.rs
source/puteron-bin/src/demon/: mod.rs  run.rs  schedule.rs  state.rs  task_create_delete.rs  task_execute.rs  task_plan.rs  task_plan_test.rs  task_util.rs
source/puteron-lib/: Cargo.toml
source/puteron-lib/src/: lib.rs  time.rs
source/puteron-lib/src/interface/: demon.rs  mod.rs
source/puteron-lib/src/interface/ipc/: mod.rs
source/puteron-lib/src/interface/message/: mod.rs  v1.rs
source/puteron-lib/src/interface/task/: mod.rs  schedule.rs
source/puteron/src/: ipc.rs  lib.rs  main.rs  nodes.md  spec.rs  task.rs
source/puteron/src/demon/: mod.rs  run.rs  schedule.rs  state.rs  task_create_delete.rs  task_execute.rs  task_plan.rs  task_plan_test.rs  task_state.rs  task_util.rs
source/slingwit-lib/: Cargo.toml
source/slingwit-lib/src/: duration.rs
source/slingwit-lib/src/interface/: mod.rs
source/slingwit-lib/src/interface/message/: mod.rs  v1.rs
source/slingwit-lib/src/interface/task/: mod.rs
source/src/: ipc_util.rs  lib.rs  main.rs  nodes.md  spec.rs
source/src/demon/: mod.rs  schedule.rs  state.rs  task_actual.rs  task_control.rs  task_control_test.rs  task_create_delete.rs  task_execute.rs  task_plan.rs  task_plan_test.rs  task_util.rs
source/src/interface/: demon.rs
source/src/interface/ipc/: mod.rs
source/src/interface/task/: mod.rs  schedule.rs
