[package]
name = "puteron"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aargvark = { version = "0.6", features = ["serde_json"] }
loga = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
taskmanager = "0.6"
tokio = { version = "1", features = ["process", "macros", "rt", "rt-multi-thread", "signal", "net", "io-util", "fs"] }
puteron-lib = { path = "../puteron-lib" }
syslog = "7"
rustix = { version = "0.38", features = ["process"] }
async-pipe = "0.1"
tokio-stream = { version = "0.1", features = ["io-util"] }
tracing = "0.1"
tracing-subscriber = "0.3"
flowcontrol = "0.2"
slotmap = "1"
chrono = "0.4"
